# NodeGraphQt

./: pyproject.toml
NodeGraphQt/base/: graph.py
NodeGraphQt/nodes/: base_node.py
NodeGraphQt/qgraphics/: node_base.py  node_text_item.py  pipe.py
NodeGraphQt/widgets/: viewer.py  viewer_nav.py
