[tool.poetry]
name = "NodeGraphQt"
version = "0.1.0"
description = ""
authors = ["Daniel Berlin <dberlin@dberlin.org>"]
readme = "README.md"

packages = [{ include = "NodeGraphQt" }]
[tool.poetry.dependencies]
python = ">=3.10 <=3.13"
pyside6 = "^6.8.1.1"
setuptools = "^75.6.0"
wheel = "^0.45.1"
qt-py = "^1.4.1"
networkx = { extras = ["default"], version = "^3.4.2" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
