[project]
name = "NodeGraphQt"
version = "0.1.0"
description = ""
authors = [{ name = "Daniel Berlin", email = "dberlin@dberlin.org" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "pyside6>=6.8.1.1,<7",
  "setuptools>=75.6.0,<76",
  "wheel>=0.45.1,<0.46",
  "qt-py>=1.4.1,<2",
  "networkx[default]>=3.4.2,<4",
]
